# DaxToolkit

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  README.txt  daxArray.cxx  daxArray.h  daxAttributeIntegerKey.cxx  daxAttributeIntegerKey.h  daxAttributeKey.h  daxAttributeKeyBase.cxx  daxAttributeKeyBase.h  daxAutoGeneratedModule.h  daxCellAverageModule.cxx  daxCellAverageModule.h  daxCellDataToPointDataModule.cxx  daxCellDataToPointDataModule.h  daxCellGradientModule.cxx  daxCellGradientModule.h  daxCellGradientModule2.cxx  daxCellGradientModule2.h  daxDataObject.cxx  daxDataObject.h  daxDataTraits.h  daxElevationModule.cxx  daxElevationModule.h  daxExecutive.cxx  daxExecutive.h  daxExecutive2.cxx  daxExecutive2.h  daxField.cxx  daxField.h  daxImageData.cxx  daxImageData.h  daxMacros.h  daxModule.cxx  daxModule.h  daxObject.cxx  daxObject.h  (+26 more)
Benchmarks/: CMakeLists.txt
Benchmarks/BlackScholes/: BlackScholes.h  CMakeLists.txt  main.cu  main.cxx
Benchmarks/FY11Timing/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  FY11Timing.cxx  Pipeline.h  PipelineCuda.cu  PipelineOpenMP.cxx  PipelineSerial.h  PipelineTBB.cxx  PipelineTBB.h  Timer.h  main.cu  main.cxx
Benchmarks/Mandlebulb/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  CoolWarmColorMap.h  Mandlebulb.cu  Mandlebulb.cxx  Mandlebulb.h  ShaderCode.h  ShaderProgram.h  Window.cu  Window.cxx  Window.h  Worklets.h  main.cu  main.cxx
Benchmarks/MarchingCubes/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  MarchingCubesConfig.h.in  MarchingCubesTiming.cxx  Pipeline.h  PipelineCuda.cu  PipelineCudaPiston.cu  PipelineOpenMP.cxx  PipelineOpenMPPiston.cxx  PipelineSerial.cxx  PipelineVTK.cxx  PipelineVTK.h  PistonPipeline.h  Timer.cxx  VTKPipeline.h  main.cu  mainVTK.cxx
Benchmarks/MarchingTetrahedra/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  Pipeline.h  main.cxx
Benchmarks/Threshold/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  PISTONPipeline.h  Pipeline.h  PipelineCudaPiston.h  PipelineOpenMP.cxx  PipelineOpenMP.h  PipelineOpenMPPiston.h  PipelinePISTON.cu  PipelinePISTON.h  PipelineSerial.h  PipelineTBB.cxx  PipelineTBB.h  PipelineVTK.cxx  PistonPipeline.h  ThresholdTiming.cxx  VTKPipeline.h  main.cu  main.cxx  mainPiston.cu  mainPiston.cxx
CUDA/Control/: CMakeLists.txt  DataArray.cu  DataArray.h  DataBridge.cu  DataBridge.h  KernelArgument.cu  KernelArgument.h
CUDA/Testing/: ArgumentsParser.h  CMakeLists.txt  DaxCUDATest.cu  SimpleCUDAKernelTest.cu
Common/: CMakeLists.txt  DaxDataArray.cu  DaxDataArray.h  DaxDataSet.h  DaxKernelArgument.h  daxMacros.h  daxObject.h  daxTypes.h
Core/: CMakeLists.txt
Core/Common/: CMakeLists.txt  CellTypes.h  DataArray.h  DataSet.h
Core/Control/: CMakeLists.txt  Macros.h  Object.cxx  Object.h  SystemIncludes.h
Core/Execution/: CMakeLists.txt  DataArrayIrregular.h  DataArrayStructuredConnectivity.h  DataArrayStructuredPoints.h  DataArrayTraits.h  Macros.h  Work.h
Core/Testing/: CMakeLists.txt
DataModel/: CMakeLists.txt  DataModelTest.cu  DataModelTest.cxx  DaxDataArray.h  DaxDataSet.h  DaxKernelArgument.h  daxDataArray.cxx  daxDataArray.h  daxDataArrayIrregular.h  daxDataArrayIrregular.txx  daxDataArrayStructuredConnectivity.cxx  daxDataArrayStructuredConnectivity.h  daxDataArrayStructuredPoints.cu  daxDataArrayStructuredPoints.cxx  daxDataArrayStructuredPoints.h  daxDataBridge.cu  daxDataBridge.h  daxDataSet.cxx  daxDataSet.h  daxImageData.cxx  daxImageData.h  daxKernelArgument.cu  daxKernelArgument.h
Doxygen/: CMakeLists.txt  doxygen.config.in
ExecutionEnvironment/: CMakeLists.txt  CellAverage.worklet  CellGradient.worklet  Cosine.worklet  DaxArgumentsParser.cxx  DaxArgumentsParser.h  DaxArray.cu  DaxArrayIrregular.cu  DaxArrayStructuredConnectivity.cu  DaxArrayStructuredPoints.cu  DaxArrayTraits.cu  DaxCell.cu  DaxCell.h  DaxCellTypes.h  DaxCommon.h  DaxDataArrayIrregular.h  DaxDataArrayStructuredConnectivity.h  DaxDataArrayStructuredPoints.h  DaxDataArrayTraits.h  DaxDataObject.cu  DaxExecutionEnvironment.h  DaxExecutionEnvironmentTest.cu  DaxField.cu  DaxField.h  DaxWork.cu  DaxWork.h  Elevation.worklet  PointDataToCellData.worklet  SimpleCUDAKernelTest.cu  Sine.worklet  Square.worklet  a.out  test.cu
Interface/Control/: CMakeLists.txt  DataArray.cxx  DataArray.h  DataArrayIrregular.h  DataArrayIrregular.txx  DataArrayStructuredConnectivity.cxx  DataArrayStructuredConnectivity.h  DataArrayStructuredPoints.cxx  DataArrayStructuredPoints.h  DataSet.cxx  DataSet.h  ImageData.cxx  ImageData.h
Testing/: CMakeLists.txt
Testing/ConceptualExecutive/: CMakeLists.txt  CompileTimeAssert.h  DataSet.h  Executive.cxx  Executive.h  Filter.h  HeterogeneousContainer.h  Module.h  NamedFilter.h  Port.h  RuntimeTraits.h  StructuredGrid.h  Worklets.h  daxArray.h  daxDeviceArray.h  daxTypes.h  main.cu  main.cxx  main2.cxx
Testing/FY11Timing/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  FY11Timing.cxx  FY11TimingConfig.h.in  Pipeline.h  PipelineCuda.cu  PipelineCuda.h  PipelineDebug.cxx  PipelineDebug.h  PipelineOpenMP.cxx  PipelineOpenMP.h  PipelineSerial.cxx  PipelineSerial.h  Timer.cxx  Timer.h
Testing/NoPipeline/: CMakeLists.txt  WorkletProxies.h  Worklets.h  main.cu
Testing/PortConcept/: CMakeLists.txt  Concept.h  FilterConnecters.h  Filters.h  Model.h  PortGenerators.h  StaticAssert.h  Worklets.h  main.cxx
Testing/Threshold/: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  PISTONPipeline.h  Pipeline.h  PipelineCuda.cu  PipelineCuda.h  PipelineDebug.cxx  PipelineDebug.h  PipelineOpenMP.cxx  PipelineOpenMP.h  PipelinePISTON.cu  PipelinePISTON.h  PipelineSerial.cxx  PipelineVTK.cxx  PipelineVTK.h  ThresholdConfig.h.in  ThresholdTiming.cxx  Timer.h  VTKPipeline.h
Testing/cuda/: ArgumentsParser.cxx  CMakeLists.txt  (+9 more)
dax/: CMakeLists.txt  CellTag.h  CellTraits.h  Extent.h  Functional.h  Pair.h  TypeTraits.h  Types.h  UnitTestExtent.cxx  UnitTestTypeTraits.cxx  UnitTestTypes.cxx  UnitTestVectorOperations.cxx  UnitTestVectorTraits.cxx  VectorOperations.h  VectorTraits.h  Version.h
(+872 files in other folders)
